clusters/hl-sol-c1/hello-world/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`hello-world.example.com`)
      kind: Rule
      services:
        - name: hello-world
          port: 80
